--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <picture>
                 <source srcset="img_webp/header/logo.webp" type="image/webp">
-                <img class="header__logo" src="img_min/header/logo.png" alt="logo" type="image/png">
+                <img class="header__logo" src="img_min/header/logo.png" alt="logo">
             </picture>
             <button class="header__login">
                 Личный кабинет
@@ -27,7 +27,7 @@
                     <li class="list__item">
                         <picture>
                             <source srcset="img_webp/goods/i1.webp" type="image/webp">
-                            <img class="item__image" src="img_min/goods/i1.png" alt="«Чегантина»" type="image/png">
+                            <img class="item__image" src="img_min/goods/i1.png" alt="«Чегантина»">
                         </picture>
                         <h4 class="item__title">«Чегантина» – парадный боевой крейсер</h4>
                         <div class="item__price">
@@ -40,7 +40,7 @@
                         <picture>
                             <source srcset="img_webp/goods/i2.webp" type="image/webp">
                             <img class="item__image" src="img_min/goods/i2.png" alt="Космический корабль синего цвета 
-                            (c локаторами)" type="image/png">
+                            (c локаторами)">
                         </picture>
                         <h4 class="item__title">Космический корабль синего цвета 
                             (c локаторами)
@@ -54,7 +54,7 @@
                     <li class="list__item">
                         <picture>
                             <source srcset="img_webp/goods/i3.webp" type="image/webp">
-                            <img class="item__image" src="img_min/goods/i3.png" alt="«Ночной ястреб»" type="image/png">
+                            <img class="item__image" src="img_min/goods/i3.png" alt="«Ночной ястреб»">
                         </picture>
                         <h4 class="item__title">«Ночной ястреб» – 
                             Надежный корабль-перехватчик
@@ -67,7 +67,7 @@
                     <li class="list__item">
                         <picture>
                             <source srcset="img_webp/goods/i4.webp" type="image/webp">
-                            <img class="item__image" src="img_min/goods/i4.png" alt="«Карающий луч»" type="image/png">
+                            <img class="item__image" src="img_min/goods/i4.png" alt="«Карающий луч»">
                         </picture>
                         <h4 class="item__title">«Карающий луч» – 
                             Полнофункциональный боевой корабль низкой ценовой категории
@@ -80,7 +80,7 @@
                     <li class="list__item">
                         <picture>
                             <source srcset="img_webp/goods/i5.webp" type="image/webp">
-                            <img class="item__image" src="img_min/goods/i5.png" alt="«Антидоминатор»" type="image/png">
+                            <img class="item__image" src="img_min/goods/i5.png" alt="«Антидоминатор»">
                         </picture>
                         <h4 class="item__title">«Антидоминатор» – 
                             Дорогое и эффективное оружие против доминаторов.
@@ -97,29 +97,29 @@
                 <div class="promo__card">
                     <picture>
                         <source srcset="img_webp/promo/i6.webp" type="image/webp">
-                        <img class="card__photo" src="img_min/promo/i6.png" alt="«Цербер»" type="image/png">
+                        <img class="card__photo" src="img_min/promo/i6.png" alt="«Цербер»">
                     </picture>
                     <div class="card__info">
                         <div class="rate">
                             <picture>
                                 <source srcset="img_webp/promo/icon--spaceship.webp" type="image/webp">
-                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img" type="image/png">
+                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img">
                             </picture>
                             <picture>
                                 <source srcset="img_webp/promo/icon--spaceship.webp" type="image/webp">
-                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img" type="image/png">
+                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img">
                             </picture>
                             <picture>
                                 <source srcset="img_webp/promo/icon--spaceship.webp" type="image/webp">
-                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img" type="image/png">
+                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img">
                             </picture>
                             <picture>
                                 <source srcset="img_webp/promo/icon--spaceship.webp" type="image/webp">
-                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img" type="image/png">
+                                <img class="rate__img" src="img_min/promo/icon--spaceship.png" alt="rate__img">
                             </picture>
                             <picture>
                                 <source srcset="img_webp/promo/icon--spaceship-opacity.webp" type="image/webp">
-                                <img class="rate__img" src="img_min/promo/icon--spaceship-opacity.png" alt="rate__img" type="image/png">
+                                <img class="rate__img" src="img_min/promo/icon--spaceship-opacity.png" alt="rate__img">
                             </picture>
                         </div>
                         <h3 class="card__title">«Цербер»</h3>
@@ -189,7 +189,7 @@
                 </div>
                 <picture>
                     <source srcset="img_webp/footer/logo.webp" type="image/webp">
-                    <img class="footer__logo" src="img_min/footer/logo.png" alt="logo" type="image/png">
+                    <img class="footer__logo" src="img_min/footer/logo.png" alt="logo">
                 </picture>
             </div>
         </footer>
